--- a/indexed.html
+++ b/indexed.html
@@ -3,7 +3,9 @@
                 <link rel="stylesheet" href="form.css">
               </head>
     <body>
-            <?php $IPATH = $_SERVER["DOCOUMENT_ROOT"]."/assets/php/"; include($IPATH. "header.html");?>   
+           <!--<?php $IPATH = $_SERVER["DOCOUMENT_ROOT"]."/assets/php/"; include($IPATH. "header.html");?>-->
+            <?php include($IPATH."header.html"); ?>
+
             <article>
             <h2>Header and Footer</h2>
             <p>this page shows how the header and footer are being represented in our website!</p>
